[tool.poetry]
name = "tsmh"
version = "0.1.0"
description = ""
authors = ["Kaito Sugimoto <hellorusk1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
numpy = "1.19.5"
python-rake = "^1.5.0"
python-zpar = "^0.9.5"
stanford-corenlp = "^3.9.2"
transformers = "^4.0.0"
torch = "^1.9.0"
nltk = "^3.6.2"
bert-score = "^0.3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
